@@ -4,6 +4,7 @@ import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import dev.the_fireplace.grandeconomy.GrandEconomy;
 import dev.the_fireplace.grandeconomy.command.commands.BalanceCommand;
+import dev.the_fireplace.grandeconomy.command.commands.GEReloadCommand;
 import dev.the_fireplace.grandeconomy.command.commands.PayCommand;
 import dev.the_fireplace.grandeconomy.command.commands.WalletCommand;
 import dev.the_fireplace.lib.api.chat.TextPaginator;
@@ -20,7 +21,8 @@ public final class RegisterGeCommands {
             LiteralArgumentBuilder.literal("gehelp")
         ).addCommands(
             new BalanceCommand().register(commandDispatcher),
-            new PayCommand().register(commandDispatcher)
+            new PayCommand().register(commandDispatcher),
+            new GEReloadCommand().register(commandDispatcher)
         ).addSubCommandsFromCommands(
             new WalletCommand().register(commandDispatcher)
         ).register(commandDispatcher);
